--- a/package.json
+++ b/package.json
@@ -1,56 +1,33 @@
 {
   "name": "react-custom-radio-buttons",
-  "version": "0.1.0",
-  "private": false,
+  "version": "1.0.0",
+  "description": "Simple Custom radio buttons for react applications",
   "main": "dist/index.js",
-  "module": "dist/index.js",
-  "babel": {
-    "presets": [
-      "react",
-      "env",
-      "stage-2"
-    ]
-  },
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "SET NODE_ENV=production  && mkdir dist && npx babel src/Components/CustomRadioButtons --out-dir dist --copy-files",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1"
+    "start": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [
-    "react",
-    "unControlled",
-    "Radio Buttons",
-    "Custom Radio Buttons"
-  ]
+    "Buttons"
+  ],
+  "author": "Osama Rezk",
+  "bugs": {
+    "url": "https://github.com/Osama-Rezk/react-custom-radio-buttons/issues"
+  },
+  "homepage": "https://github.com/Osama-Rezk/react-custom-radio-buttons#readme",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "prop-types": "^15.7.2",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  }
 }
