--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Simple Custom radio buttons for react applications",
   "main": "dist/index.js",
+  "private": false,
   "scripts": {
     "start": "webpack --mode development",
     "build": "webpack --mode production"
@@ -18,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
@@ -26,7 +28,6 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
