update read.me & package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build": "webpack --mode production"
   },
   "keywords": [
-    "Buttons"
+    "react",
+    "Buttons",
+    "Radio Buttons",
+    "Un Controlled",
+    "radio",
+    "radio group"
   ],
   "author": "Osama Rezk",
   "bugs": {
